--- a/index.html
+++ b/index.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Portfolio</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bienvenue sur mon Portfolio</h1>
-    <p>Cette page est en cours de construction.</p>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#about">À propos</a></li>
+                <li><a href="#projects">Projets</a></li>
+                <li><a href="#experience">Expériences</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section id="about">
+        <h1>Bienvenue sur mon Portfolio</h1>
+        <p>Je suis [Ton Nom], [Ton Métier ou Études]. Passionné(e) par [Domaine].</p>
+    </section>
+
+    <section id="projects">
+        <h2>Mes Projets</h2>
+        <p>Liste de projets que tu as réalisés.</p>
+    </section>
+
+    <section id="experience">
+        <h2>Expériences</h2>
+        <p>Ton parcours professionnel ou académique.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email : [Ton Email]</p>
+        <p>LinkedIn : <a href="https://linkedin.com/in/tonprofil">Mon LinkedIn</a></p>
+    </section>
 </body>
 </html>
