--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,33 +10,61 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#experience">Expériences</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#thesis">PhD Thesis</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#experience">Professional Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-    
-    <section id="about">
-        <h1>Bienvenue sur mon Portfolio</h1>
-        <p>Je suis [Ton Nom], [Ton Métier ou Études]. Passionné(e) par [Domaine].</p>
+
+    <!-- About Me Section -->
+    <section id="About me">
+        <h1>Welcome to My Portfolio</h1>
+        <p>I am a Data Scientist located in Marseille, currently pursuing a PhD in Data Science and Artificial Intelligence. My academic journey has led me to explore machine learning algorithms, and I am passionate about using data and AI to build intelligent systems that drive innovation in various industries.".</p>
     </section>
 
-    <section id="projects">
-        <h2>Mes Projets</h2>
-        <p>Liste de projets que tu as réalisés.</p>
+    <!-- Education Section -->
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li><strong>Master's Degree in Applied Mathematics and Statistics, Data Science Track<</strong> - [Aix Marseille University], [2022-2024]</li>
+            <li><strong>Bachelor's Degree in Mathematics and Computer Science </strong> - [Aix Marseille University], [2019-2021]</li>
+        </ul>
     </section>
 
+    <!-- Thesis Section -->
+    <section id="thesis">
+        <h2>PhD Thesis</h2>
+        <p>Currently, I am working on my PhD thesis in [Research Field], at Aix Marseille University. My research focuses on Magnetohydrodynamics.
+        The field of Magnetohydrodynamics (MHD) is an interdisciplinary domain combining fluid mechanics and electromagnetism to study the properties of conducting fluids subjected to magnetic fields. The mathematical description relies on a complex system of nonlinear partial differential equations (PDEs), presenting significant challenges for understanding MHD instabilities. These instabilities are crucial in applications such as nuclear fusion (plasma stability in tokamaks) and astrophysical magnetic field dynamics. This thesis aims to address the characterization of MHD instabilities through mathematical modeling, numerical analysis, and the use of modern machine learning techniques to identify and predict unstable behaviors.</p>
+    </section>
+
+    <!-- Publications Section -->
+    <section id="publications">
+        <h2>Publications</h2>
+        <ul>
+            <li><strong>[Title of the Publication]</strong> - Published in [Journal/Conference], [Year]</li>
+            <li><strong>[Another Publication]</strong> - Published in [Journal/Conference], [Year]</li>
+        </ul>
+    </section>
+
+    <!-- Professional Experience Section -->
     <section id="experience">
-        <h2>Expériences</h2>
-        <p>Ton parcours professionnel ou académique.</p>
+        <h2>Professional Experience</h2>
+        <ul>
+            <li><strong>Data Scientist at Orange</strong> - [2023-2024] - Description of your tasks and accomplishments.</li>
+            <li><strong>Internship </strong> - [Dates] - Description of your responsibilities and achievements.</li>
+        </ul>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email : [Ton Email]</p>
-        <p>LinkedIn : <a href="https://linkedin.com/in/tonprofil">Mon LinkedIn</a></p>
+        <p>Email: [Your Email]</p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">My LinkedIn</a></p>
     </section>
 </body>
 </html>
