--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Appliquer une couleur bleue aux titres des sections */
+        h1, h2 {
+            color: #007BFF; /* Choisir une nuance de bleu */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -22,7 +28,7 @@
 
     <!-- About Me Section -->
     <section id="About me">
-        <h1>Welcome to My Portfolio</h1>
+        <h1>About me</h1>
         <p>I am a Data Scientist located in Marseille, currently pursuing a PhD in Data Science and Artificial Intelligence. My academic journey has led me to explore machine learning algorithms, and I am passionate about using data and AI to build intelligent systems that drive innovation in various industries.".</p>
     </section>
 
@@ -30,18 +36,21 @@
     <section id="education">
         <h2>Education</h2>
         <ul>
-            <li><strong>Master's Degree in Applied Mathematics and Statistics, Data Science Track<</strong> - [Aix Marseille University], [2022-2024]</li>
-            <li><strong>Bachelor's Degree in Mathematics and Computer Science </strong> - [Aix Marseille University], [2019-2021]</li>
+            <li><strong>PHD Degree in Data Science and Artificial Intelligence</strong> - Aix Marseille University, [2025-2027]</li>
+            <li><strong>Master's Degree in Applied Mathematics and Statistics, Data Science Track</strong> - Aix Marseille University, [2022-2024]</li>
+            <li><strong>Bachelor's Degree in Mathematics and Computer Science </strong> - Aix Marseille University, [2019-2021]</li>
         </ul>
     </section>
 
     <!-- Thesis Section -->
     <section id="thesis">
         <h2>PhD Thesis</h2>
-        <p>Currently, I am working on my PhD thesis in [Research Field], at Aix Marseille University. My research focuses on Magnetohydrodynamics.
-        The field of Magnetohydrodynamics (MHD) is an interdisciplinary domain combining fluid mechanics and electromagnetism to study the properties of conducting fluids subjected to magnetic fields. The mathematical description relies on a complex system of nonlinear partial differential equations (PDEs), presenting significant challenges for understanding MHD instabilities. These instabilities are crucial in applications such as nuclear fusion (plasma stability in tokamaks) and astrophysical magnetic field dynamics. This thesis aims to address the characterization of MHD instabilities through mathematical modeling, numerical analysis, and the use of modern machine learning techniques to identify and predict unstable behaviors.</p>
+        <p>Currently, I am working on the Characterization of Magnetohydrodynamic Instabilities in Magnetized Plasmas through a Data-Driven Approach at Aix-Marseille University.
+Magnetohydrodynamics (MHD) is an interdisciplinary field combining fluid mechanics and electromagnetism to study the properties of conducting fluids subjected to magnetic fields. The mathematical description involves a complex system of nonlinear partial differential equations (PDEs), presenting significant challenges in understanding MHD instabilities. These instabilities are crucial for applications such as nuclear fusion (plasma stability in tokamaks) and astrophysical magnetic field dynamics. This thesis aims to address the characterization of MHD instabilities through mathematical modeling, numerical analysis, and the application of modern machine learning techniques to identify and predict unstable behaviors.</p>
     </section>
 
+    
+    <!--
     <!-- Publications Section -->
     <section id="publications">
         <h2>Publications</h2>
@@ -50,15 +59,32 @@
             <li><strong>[Another Publication]</strong> - Published in [Journal/Conference], [Year]</li>
         </ul>
     </section>
+    -->
 
     <!-- Professional Experience Section -->
     <section id="experience">
         <h2>Professional Experience</h2>
         <ul>
-            <li><strong>Data Scientist at Orange</strong> - [2023-2024] - Description of your tasks and accomplishments.</li>
-            <li><strong>Internship </strong> - [Dates] - Description of your responsibilities and achievements.</li>
+            <li>
+                <strong> Data Scientist - Contract</strong> - Orange, Marseille, [2023-2024]
+                <ul>
+                    <li>Worked on predictive modeling and data analysis using machine learning algorithms.</li>
+                    <li>Developed a model that improved the accuracy of customer churn predictions by 20%.</li>
+                    <li>Collaborated with a cross-functional team to integrate data insights into business decisions.</li>
+                    <li>Used Python and TensorFlow for model development and deployment.</li>
+                </ul>
+            </li>
+            <li>
+                <strong>Data Scientist - Internship</strong> - I2M, Marseille, [2023]
+                <ul>
+                    <li>Data compression using deep learning architectures - Pytorch.</li>
+                    <li>Generative AI : Convolutional Neural Network, Autoencoders, GAN.</li>
+                    <li>SVD (Singular Value Decomposition).</li>
+                </ul>
+            </li>
         </ul>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact">
